Modified login and signup pages to match mobile mockup and fixed header scrollbar

--- a/prototype/css/main.css
+++ b/prototype/css/main.css
@@ -17,7 +17,7 @@ html {
 
 header,
 nav {
-    width: 95%;
+    width: 100%;
     height: auto;
     overflow: auto;
 }
@@ -172,7 +172,11 @@ img {
 
 #icon .flex-container {
     justify-content: flex-start;
-    margin: auto 10%;
+    margin: auto;
+}
+
+#icon a {
+    margin-left: 10%;
 }
 
 .fa-bars {
